[gd_scene load_steps=10 format=3 uid="uid://c41lerf86ba75"]

[ext_resource type="PackedScene" uid="uid://raujhngxvpl1" path="res://Actors/Player/Player.tscn" id="1_2p50b"]
[ext_resource type="Script" path="res://Scripts/LevelConstructor.gd" id="1_067a3"]
[ext_resource type="PackedScene" uid="uid://pwis3gamyvf" path="res://Actors/Entities/EntityBase.tscn" id="3_8fmvg"]
[ext_resource type="PackedScene" uid="uid://dyyclqnanqmah" path="res://Actors/DimensionalWindow.tscn" id="4_ff4i8"]
[ext_resource type="Script" path="res://Scripts/LevelFollower.gd" id="4_wwiig"]
[ext_resource type="TileSet" uid="uid://c0cg70lv5ie4o" path="res://Graphics/Tiles/TileSet.tres" id="5_iq517"]

[sub_resource type="Gradient" id="Gradient_yw64d"]
offsets = PackedFloat32Array(0, 0.25, 0.75, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r1ksu"]
gradient = SubResource("Gradient_yw64d")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ubeqo"]
emission_shape = 3
emission_box_extents = Vector3(360, 180, 1)
particle_flag_disable_z = true
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color_ramp = SubResource("GradientTexture1D_r1ksu")

[node name="Main" type="Node2D"]

[node name="LevelConstructor" type="Node2D" parent="." node_paths=PackedStringArray("player", "tilemap", "limbo_tmap", "statics_holder", "window_holder", "entity_holder")]
script = ExtResource("1_067a3")
dimensional_window_scene = ExtResource("4_ff4i8")
entity_scene = ExtResource("3_8fmvg")
player = NodePath("../Player")
tilemap = NodePath("../EditorTilemap")
limbo_tmap = NodePath("../LimboTilemap")
statics_holder = NodePath("../StaticsHolder")
window_holder = NodePath("../WindowHolder")
entity_holder = NodePath("../EntityHolder")
level_name = "catswitch_test"
start_game_level_name = "catswitch_test"

[node name="EntityHolder" type="Node2D" parent="."]

[node name="StaticsHolder" type="Node2D" parent="."]

[node name="WindowHolder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ActiveLevelFollower" type="Node2D" parent="." node_paths=PackedStringArray("constructor", "cam")]
script = ExtResource("4_wwiig")
constructor = NodePath("../LevelConstructor")
cam = NodePath("../Camera2D")

[node name="CameraMoveTimer" type="Timer" parent="ActiveLevelFollower"]
one_shot = true

[node name="LimboTilemap" type="TileMap" parent="."]
visible = false
clip_children = 2
z_index = -2
tile_set = ExtResource("5_iq517")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 196609, 1, -65535, 196609, 1, -65534, 196609, 1, -65533, 196609, 1, -65532, 196609, 1, -65531, 196609, 1, -65530, 196609, 1, -65529, 196609, 1, -65528, 196609, 1, -65527, 196609, 1, -65526, 196609, 1, -65525, 196609, 1, -65524, 196609, 1, -65523, 196609, 1, -65522, 196609, 1, -65521, 196609, 1, -65520, 196609, 1, -65519, 196609, 1, -65518, 196609, 1, -65517, 196609, 1, -65516, 196609, 1, -65515, 196609, 1, -65514, 196609, 1, -65513, 196609, 1, -65512, 196609, 1, -65511, 196609, 1, -65510, 196609, 1, -65509, 196609, 1, -65508, 196609, 1, -65507, 196609, 1, -65506, 196609, 1, -65505, 196609, 1, -65504, 196609, 1, -65503, 196609, 1, -65502, 196609, 1, -65501, 196609, 1, -65500, 196609, 1, -65499, 196609, 1, -65498, 196609, 1, -65497, 196609, 1, -65496, 196609, 1, -65495, 196609, 1, -65494, 196609, 1, -65493, 196609, 1, -65492, 196609, 1, -65491, 196609, 1, -65490, 196609, 1, -65489, 196609, 1, -65488, 196609, 1, -65487, 196609, 1, -65486, 196609, 1, -65485, 196609, 1, -65484, 196609, 1, -65483, 196609, 1, -65482, 196609, 1, -65481, 196609, 1, -65480, 196609, 1, -65479, 196609, 1, -65478, 196609, 1, -65477, 196609, 1, -65476, 196609, 1, -65475, 196609, 1, -65474, 196609, 1, -65473, 196609, 1, -65472, 196609, 1, -65471, 196609, 1, -65470, 196609, 1, -65469, 196609, 1, -65468, 196609, 1, -65467, 196609, 1, -65466, 196609, 1, -65465, 196609, 1, -65464, 196609, 1, -65463, 196609, 1, -65462, 196609, 1, -65461, 196609, 1, -65460, 196609, 1, -65459, 196609, 1, -65458, 196609, 1, -65457, 196609, 1, 80, 196609, 1, 65616, 196609, 1, 131152, 196609, 1, 196688, 196609, 1, 262224, 196609, 1, 327760, 196609, 1, 393296, 196609, 1, 458832, 196609, 1, 524368, 196609, 1, 589904, 196609, 1, 655440, 196609, 1, 720976, 196609, 1, 786512, 196609, 1, 852048, 196609, 1, 917584, 196609, 1, 983120, 196609, 1, 1048656, 196609, 1, 1114192, 196609, 1, 1179728, 196609, 1, 1245264, 196609, 1, 1310800, 196609, 1, 1376336, 196609, 1, 1441872, 196609, 1, 1507408, 196609, 1, 1572944, 196609, 1, 1638480, 196609, 1, 1704016, 196609, 1, 1769552, 196609, 1, 1835088, 196609, 1, 1900624, 196609, 1, 1966160, 196609, 1, 2031696, 196609, 1, 2097232, 196609, 1, 2162768, 196609, 1, 2228304, 196609, 1, 2293840, 196609, 1, 2359376, 196609, 1, 2424912, 196609, 1, 2490448, 196609, 1, 2555984, 196609, 1, 2621520, 196609, 1, 2687056, 196609, 1, 2752592, 196609, 1, 2818128, 196609, 1, 2883664, 196609, 1, 2949199, 196609, 1, 2949198, 196609, 1, 2949197, 196609, 1, 2949196, 196609, 1, 2949195, 196609, 1, 2949194, 196609, 1, 2949193, 196609, 1, 2949192, 196609, 1, 2949191, 196609, 1, 2949190, 196609, 1, 2949189, 196609, 1, 2949188, 196609, 1, 2949187, 196609, 1, 2949186, 196609, 1, 2949185, 196609, 1, 2949184, 196609, 1, 2949183, 196609, 1, 2949182, 196609, 1, 2949181, 196609, 1, 2949180, 196609, 1, 2949179, 196609, 1, 2949178, 196609, 1, 2949177, 196609, 1, 2949176, 196609, 1, 2949175, 196609, 1, 2949174, 196609, 1, 2949173, 196609, 1, 2949172, 196609, 1, 2949171, 196609, 1, 2949170, 196609, 1, 2949169, 196609, 1, 2949168, 196609, 1, 2949167, 196609, 1, 2949166, 196609, 1, 2949165, 196609, 1, 2949164, 196609, 1, 2949163, 196609, 1, 2949162, 196609, 1, 2949161, 196609, 1, 2949160, 196609, 1, 2949159, 196609, 1, 2949158, 196609, 1, 2949157, 196609, 1, 2949156, 196609, 1, 2949155, 196609, 1, 2949154, 196609, 1, 2949153, 196609, 1, 2949152, 196609, 1, 2949151, 196609, 1, 2949150, 196609, 1, 2949149, 196609, 1, 2949148, 196609, 1, 2949147, 196609, 1, 2949146, 196609, 1, 2949145, 196609, 1, 2949144, 196609, 1, 2949143, 196609, 1, 2949142, 196609, 1, 2949141, 196609, 1, 2949140, 196609, 1, 2949139, 196609, 1, 2949138, 196609, 1, 2949137, 196609, 1, 2949136, 196609, 1, 2949135, 196609, 1, 2949134, 196609, 1, 2949133, 196609, 1, 2949132, 196609, 1, 2949131, 196609, 1, 2949130, 196609, 1, 2949129, 196609, 1, 2949128, 196609, 1, 2949127, 196609, 1, 2949126, 196609, 1, 2949125, 196609, 1, 2949124, 196609, 1, 2949123, 196609, 1, 2949122, 196609, 1, 2949121, 196609, 1, 2949120, 196609, 1, 2949119, 196609, 1, 2883583, 196609, 1, 2818047, 196609, 1, 2752511, 196609, 1, 2686975, 196609, 1, 2621439, 196609, 1, 2555903, 196609, 1, 2490367, 196609, 1, 2424831, 196609, 1, 2359295, 196609, 1, 2293759, 196609, 1, 2228223, 196609, 1, 2162687, 196609, 1, 2097151, 196609, 1, 2031615, 196609, 1, 1966079, 196609, 1, 1900543, 196609, 1, 1835007, 196609, 1, 1769471, 196609, 1, 1703935, 196609, 1, 1638399, 196609, 1, 1572863, 196609, 1, 1507327, 196609, 1, 1441791, 196609, 1, 1376255, 196609, 1, 1310719, 196609, 1, 1245183, 196609, 1, 1179647, 196609, 1, 1114111, 196609, 1, 1048575, 196609, 1, 983039, 196609, 1, 917503, 196609, 1, 851967, 196609, 1, 786431, 196609, 1, 720895, 196609, 1, 655359, 196609, 1, 589823, 196609, 1, 524287, 196609, 1, 458751, 196609, 1, 393215, 196609, 1, 327679, 196609, 1, 262143, 196609, 1, 196607, 196609, 1, 3014656, 65537, 0, 3014657, 65537, 0, 3014658, 65537, 0, 3014659, 65537, 0, 3014660, 65537, 0, 3014661, 65537, 0, 3014662, 65537, 0, 3014663, 65537, 0, 3014664, 65537, 0, 3014665, 65537, 0, 3014666, 65537, 0, 3014667, 65537, 0, 3014668, 65537, 0, 3014669, 65537, 0, 3014670, 65537, 0, 3014671, 65537, 0, 3014672, 65537, 0, 3014673, 65537, 0, 3014674, 65537, 0, 3014675, 65537, 0, 3014676, 65537, 0, 3014677, 65537, 0, 3014678, 65537, 0, 3014679, 65537, 0, 3014680, 65537, 0, 3014681, 65537, 0, 3014682, 65537, 0, 3014683, 65537, 0, 3014684, 65537, 0, 3014685, 65537, 0, 3014686, 65537, 0, 3014687, 65537, 0, 3014688, 65537, 0, 3014689, 65537, 0, 3014690, 65537, 0, 3014691, 65537, 0, 3014692, 65537, 0, 3014693, 65537, 0, 3014694, 65537, 0, 3014695, 65537, 0, 3014696, 65537, 0, 3014697, 65537, 0, 3014698, 65537, 0, 3014699, 65537, 0, 3014700, 65537, 0, 3014701, 65537, 0, 3014702, 65537, 0, 3014703, 65537, 0, 3014704, 65537, 0, 3014705, 65537, 0, 3014706, 65537, 0, 3014707, 65537, 0, 3014708, 65537, 0, 3014709, 65537, 0, 3014710, 65537, 0, 3014711, 65537, 0, 3014712, 65537, 0, 3014713, 65537, 0, 3014714, 65537, 0, 3014715, 65537, 0, 3014716, 65537, 0, 3014717, 65537, 0, 3014718, 65537, 0, 3014719, 65537, 0, 3014720, 65537, 0, 3014721, 65537, 0, 3014722, 65537, 0, 3014723, 65537, 0, 3014724, 65537, 0, 3014725, 65537, 0, 3014726, 65537, 0, 3014727, 65537, 0, 3014728, 65537, 0, 3014729, 65537, 0, 3014730, 65537, 0, 3014731, 65537, 0, 3014732, 65537, 0, 3014733, 65537, 0, 3014734, 65537, 0, 3014735, 65537, 0, 2883665, 131073, 1, 2818129, 131073, 1, 2752593, 131073, 4, 2687057, 131073, 4, 2621521, 131073, 1, 2555985, 131073, 4, 2490449, 131073, 1, 2424913, 131073, 1, 2359377, 131073, 4, 2293841, 131073, 1, 2228305, 131073, 4, 2162769, 131073, 1, 2097233, 131073, 4, 2031697, 131073, 1, 1966161, 131073, 1, 1900625, 131073, 1, 1835089, 131073, 4, 1769553, 131073, 4, 1704017, 131073, 1, 1638481, 131073, 4, 1572945, 131073, 1, 1507409, 131073, 4, 1441873, 131073, 4, 1376337, 131073, 4, 1310801, 131073, 1, 1245265, 131073, 4, 1179729, 131073, 1, 1114193, 131073, 4, 1048657, 131073, 1, 983121, 131073, 4, 917585, 131073, 4, 852049, 131073, 4, 786513, 131073, 4, 720977, 131073, 4, 655441, 131073, 1, 589905, 131073, 1, 524369, 131073, 1, 458833, 131073, 4, 393297, 131073, 1, 327761, 131073, 1, 262225, 131073, 4, 196689, 131073, 1, 131153, 131073, 4, 65617, 131073, 1, 81, 131073, 1, -130993, 1, 0, -130994, 1, 0, -130995, 1, 0, -130996, 1, 0, -130997, 1, 0, -130998, 1, 0, -130999, 1, 0, -131000, 1, 0, -131001, 1, 0, -131002, 1, 0, -131003, 1, 0, -131004, 1, 0, -131005, 1, 0, -131006, 1, 0, -131007, 1, 0, -131008, 1, 0, -131009, 1, 0, -131010, 1, 0, -131011, 1, 0, -131012, 1, 0, -131013, 1, 0, -131014, 1, 0, -131015, 1, 0, -131016, 1, 0, -131017, 1, 0, -131018, 1, 0, -131019, 1, 0, -131020, 1, 0, -131021, 1, 0, -131022, 1, 0, -131023, 1, 0, -131024, 1, 0, -131025, 1, 0, -131026, 1, 0, -131027, 1, 0, -131028, 1, 0, -131029, 1, 0, -131030, 1, 0, -131031, 1, 0, -131032, 1, 0, -131033, 1, 0, -131034, 1, 0, -131035, 1, 0, -131036, 1, 0, -131037, 1, 0, -131038, 1, 0, -131039, 1, 0, -131040, 1, 0, -131041, 1, 0, -131042, 1, 0, -131043, 1, 0, -131044, 1, 0, -131045, 1, 0, -131046, 1, 0, -131047, 1, 0, -131048, 1, 0, -131049, 1, 0, -131050, 1, 0, -131051, 1, 0, -131052, 1, 0, -131053, 1, 0, -131054, 1, 0, -131055, 1, 0, -131056, 1, 0, -131057, 1, 0, -131058, 1, 0, -131059, 1, 0, -131060, 1, 0, -131061, 1, 0, -131062, 1, 0, -131063, 1, 0, -131064, 1, 0, -131065, 1, 0, -131066, 1, 0, -131067, 1, 0, -131068, 1, 0, -131069, 1, 0, -131070, 1, 0, -131071, 1, 0, -131072, 1, 0, 65534, 65537, 1, 131070, 65537, 4, 196606, 65537, 4, 262142, 65537, 4, 327678, 65537, 4, 393214, 65537, 4, 458750, 65537, 1, 524286, 65537, 4, 589822, 65537, 4, 655358, 65537, 4, 720894, 65537, 1, 786430, 65537, 4, 851966, 65537, 1, 917502, 65537, 4, 983038, 65537, 1, 1048574, 65537, 4, 1114110, 65537, 1, 1179646, 65537, 1, 1245182, 65537, 1, 1310718, 65537, 4, 1376254, 65537, 4, 1441790, 65537, 4, 1507326, 65537, 1, 1572862, 65537, 1, 1638398, 65537, 4, 1703934, 65537, 1, 1769470, 65537, 4, 1835006, 65537, 4, 1900542, 65537, 4, 1966078, 65537, 4, 2031614, 65537, 4, 2097150, 65537, 4, 2162686, 65537, 4, 2228222, 65537, 4, 2293758, 65537, 4, 2359294, 65537, 4, 2424830, 65537, 1, 2490366, 65537, 4, 2555902, 65537, 4, 2621438, 65537, 4, 2686974, 65537, 4, 2752510, 65537, 4, 2818046, 65537, 1, 2883582, 65537, 1, 2949118, 65537, 4, -65538, 1, 2, -2, 65537, 4, -1, 196609, 1, -65537, 1, 0, -130992, 1, 0, -65456, 196609, 1, -65455, 131073, 4, -130991, 196609, 2, 2949200, 196609, 1, 3014737, 196609, 3, 2949201, 131073, 4, 3014736, 65537, 0, 3014654, 65537, 1, 3080191, 65537, 0, 3014655, 196609, 1, 3080190, 1, 3, 65535, 196609, 1, 131071, 196609, 1)

[node name="EditorTilemap" type="TileMap" parent="."]
tile_set = ExtResource("5_iq517")
format = 2
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="Player" parent="." instance=ExtResource("1_2p50b")]
z_index = 10
position = Vector2(60, 232)
collision_layer = 2147483650

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="Background"]
position = Vector2(320, 180)
amount = 100
process_material = SubResource("ParticleProcessMaterial_ubeqo")
lifetime = 4.0

[node name="BottomRightMarker" type="Marker2D" parent="."]
position = Vector2(640, 360)

[connection signal="target_met" from="ActiveLevelFollower" to="LevelConstructor" method="_on_active_level_follower_target_met"]
[connection signal="screen_exited" from="Player" to="LevelConstructor" method="enter_new_screen"]
